# Lab_SQL_Anja_Scherwall_DE25

./: .gitignore  EDA.ipynb  README.md  load_sakila_sqlite_duckdb.py  pyproject.toml  stakeholder_report.ipynb
dashboard/pages/: index.md  movie_actors.md  movie_length.md  revenue.md  sakila.md
dashboard/sources/sakila/: actor_movies.sql  film.sql  income.sql
sql/: querys_sql.sql
